[package]
name = "saju-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kangnam7654/saju-engine"
description = "Korean four-pillars (사주팔자) astrology computation engine — pillars, elements, ten gods, daily/monthly/daeun fortunes. Pure computation, no IO."

[lints.rust]
unsafe_code = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Tests are inline `#[cfg(test)]` modules — no extra dev deps.
